# nacha_parser

./: README.md  SPECS_MONITORING.md  architecture_overview.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: regenerate-specs.yml  validate.yml
scripts/: regenerate_specs.py
specs/: .regeneration.config.yml
specs/official/: NACHA_FILE_FORMAT_SPECIFICATION.md  NACHA_IMPLEMENTATION_GUIDE.md
specs/yml/: nacha_error_definitions.yml  nacha_validation_rules.yml  nacha_validation_schema.yml
src/nacha_parser/: __init__.py  parser.py
tests/: test_parser.py  test_spec_cases.py
